--- a/src/main/resources/templates/registroProveedor.html
+++ b/src/main/resources/templates/registroProveedor.html
@@ -32,7 +32,7 @@
     <div class="container3">
       <h1>Registro de Proveedor</h1>
       <form
-        action="/proveedor/registro"
+        th:action="@{/registro}"
         method="POST"
         enctype="multipart/form-data"
       >
