--- a/src/main/resources/templates/ContactarProveedor.html
+++ b/src/main/resources/templates/ContactarProveedor.html
@@ -22,8 +22,11 @@
         <div class="izquiercon">
 
             <div class="fotoPerfil">
-                <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg"
-                    class="fotoPerfil" alt="">
+                <img th:src="'data:image/jpeg;base64,' + ${imagen}" alt="Imagen de perfil">
+
+                <!--<img th:src="@{/orden/contacto/__${imagen.id}__}" alt="ImagenProveedor" />-->
+                <!--  <img th:src="data:image/png;base64,${proveedor.imagen.getContenido()}">-->
+                <!-- <img th:src=""-->
             </div>
 
 
