--- a/src/main/resources/templates/modificarProveedor.html
+++ b/src/main/resources/templates/modificarProveedor.html
@@ -81,7 +81,7 @@
   <section class="">
     <div class="row mt-3">
       <div class="divVolver">
-        <a th:href="@{/panelProveedor}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+        <a th:href="@{/proveedor/panelProveedor}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
       </div>
     </div>
   </section>
