--- a/src/main/resources/templates/MisOrdenes.html
+++ b/src/main/resources/templates/MisOrdenes.html
@@ -1,72 +1,69 @@
 <!DOCTYPE html>
-
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
+<html lang="es">
 
 <head>
-  <title>TODO supply a title</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="" type="image/x-icon">
+  <title>Ordenes Proveedor</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" th:href="@{/css/estilos2.css}">
 
 <body>
-  <div>Orden creada</div>
-  <div>aca van todas las ordenes</div>
+  <header></header>
 
-  <table>
-    <h3>Listado de orden</h3>
-    <thead>
-      <tr>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <h1 class="text-center">Listado de Ordenes de Proveedor</h1>
+      </div>
+    </div>
+  </div>
+
+  <div>
+    <table class="table" style="width: 900px; border: 2px solid #FF7F00;">
+      <h3>Listado de ordenes Recibidas</h3>
+      <thead class="table-light" style="border: 1px solid #FF7F00;">
         <th scope="col">id Orden</th>
         <th scope="col">Nombre Usuario</th>
         <th scope="col">Nombre Proveedor</th>
-        <th scope="col">Descripcion del trabajo</th>
+        <th scope="col">Comentario</th>
         <th scope="col">Estado</th>
-        <th scope="col">Puntaje que le dio el usuario</th>
-        <!--<th sec:authorize="hasRole('PROVEEDOR')" scope="col">Acciones</th>-->
-      </tr>
-    </thead>
-    <tbody th:each="orden : ${listaOrdenes}">
-      <th th:text="${orden.id}"></th>
-      <td th:text="${orden.usuario.nombre}"></td>
-      <td th:text="${orden.proveedor.nombre}"></td>
-      <td th:text="${orden.comentario}"></td>
-      <td th:text="${orden.estadOrden}"></td>
-      <td th:text="${orden.puntaje}"></td>
+        <th scope="col">Acciones</th>
+      </thead>
+      <tbody th:each="orden : ${listaOrdenes}" style="background-color: #333; border: 1px solid #FF7F00;">
+        <tr style="color: #FFFFFF">
+          <th th:text="${orden.id}"></th>
+          <td th:text="${orden.usuario.nombre}"></td>
+          <td th:text="${orden.proveedor.nombre}"></td>
+          <td th:text="${orden.comentario}"></td>
+          <td th:text="${orden.estadOrden}"></td>
+          <td>
+            <a th:href="@{/orden/cancelar/__${orden.id}__}">Cancelar</a>
+            <a th:href="@{/orden/aceptar/__${orden.id}__}">Aceptar cotizacion</a>
+            <a th:href="@{/orden/calificar/__${orden.id}__}">Calificar</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-      <form th:action="@{/orden/cotizacion/__${orden.id}__}" method="POST">
-        <div class="textoOT">
-          <h4>Cotización</h4>
-          <p>
-            <input type="number" class="form-control p-4" placeholder="Ingresa el valor de la cotización" name="valor"
-              required="required" />
-          </p>
-          <div class="boton">
-            <button class="btn btn-primary btn-block py-3" type="submit">
-              Enviar Cotización
-            </button>
-          </div>
-        </div>
-      </form>
-      <td>
-        <a th:href="@{/orden/cancelar/__${orden.id}__}">Cancelar</a>
-        <!--<a th:href="@{/orden/aceptar/__${orden.id}__}" >Aceptar cotizacion</a>-->
-        <a sec:authorize="hasRole('USER')">
-          <form th:action="@{/orden/aceptar}" method="post">
-            <input type="hidden" name="ordenId" th:value="${orden.id}" />
-            <button type="submit">Aceptar cotización</button>
-          </form>
-        </a>
-      </td>
-    </tbody>
-  </table>
+  <section class="">
+    <div class="row mt-3">
+      <div class="divVolver">
+        <a href="/proveedor/panelProveedor" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="pie"> </footer>
+
+  <script src="js/heafoo.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
-
-<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-  <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
-</ul>
 
 </html>
