--- a/src/main/resources/templates/registroProveedor.html
+++ b/src/main/resources/templates/registroProveedor.html
@@ -41,7 +41,7 @@
 
         <label class="textofp" for="email">Email:</label>
         <input
-          class="textofp"
+          class="text"
           type="email"
           id="email"
           name="email"
