--- a/src/main/resources/templates/panelProveedor.html
+++ b/src/main/resources/templates/panelProveedor.html
@@ -7,17 +7,17 @@
     <link rel="shortcut icon" href="" type="image/x-icon">
     <title>panelProveedor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
+    <link rel="stylesheet" href="estilos2.css">
 </head>
 
   <body>
 
 
     <nav th:replace="fragments/navbar::nav"></nav>
-
+<div class="container">
     <h1>Mi Perfil</h1>
     <div class="col-md-4">
-      <div class="container">
+      
         <p>
           BIENVENIDO
           <span
