--- a/src/main/resources/templates/registroProveedor.html
+++ b/src/main/resources/templates/registroProveedor.html
@@ -51,10 +51,10 @@
 
       <label class="textofp" for="rubro">selecciona un rubro:</label>
       <select id="rubro" name="rubro">
-        <option value="Jardinero">Jardinero</option>
-        <option value="Chapista">Chapista</option>
+        <option value="Jardinero">Jardinero/a</option>
+        <option value="Chapista">Plomero</option>
         <option value="Piletero">Piletero</option>
-        <option value="Salidor">Salidor</option>
+        <option value="Salidor">Paseador/a de perros</option>
         <option value="Limpieza">Limpieza</option>
         <option value="Otro">
           Otro
