--- a/src/main/resources/templates/LoginUsuario.html
+++ b/src/main/resources/templates/LoginUsuario.html
@@ -49,7 +49,7 @@
     </nav>
     <h1>ProSkillFinder</h1>
 
-    <h3>Inicia Secion o Registrate segun corresponda</h3>
+    <h3>Inicia Sesion o Registrate segun corresponda</h3>
     <div class="container2">
       <div class="left-side">
         <div class="box">
