--- a/src/main/resources/templates/registroProveedor.html
+++ b/src/main/resources/templates/registroProveedor.html
@@ -32,7 +32,7 @@
     <div class="container3">
       <h1>Registro de Proveedor</h1>
       <form
-        th:action="@{/registro}"
+        th:action="@{/proveedor/registro}"
         method="POST"
         enctype="multipart/form-data"
       >
