--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -549,6 +549,52 @@ textarea {
   border-radius: 10px;
 }
 
+/*Panel proveedor*/
+.container4{
+    
+  display: flex;
+    justify-content:left;
+    align-items:center;
+    height: 40%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+  margin-left: 10%;
+}
+.fotoDescripcion{
+  margin: 30px auto;
+  overflow: hidden;
+  border-radius: 20px;
+  border: 5px solid orange;
+  width: 100%;
+  height: 100%;
+  color: white;
+}
+
+.bprov {
+  width: 80%;
+  height: 100px;
+  margin-bottom: 19%;
+  margin-right: 10%;
+  margin-left: 25%;
+    
+}.bprov h5{
+  text-align: center;
+}
+
+
+#botonppp {
+  display: flex;
+  margin: 27%;
+  border-radius: 5px;
+  background: linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%);
+  color: white;
+
+}
+
+#botonppp:hover {
+  color: red;
+}
+
 /*Modificar Usuario*/
 
 
