--- a/src/main/resources/templates/panelProveedor.html
+++ b/src/main/resources/templates/panelProveedor.html
@@ -3,13 +3,13 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 
 
-  <head>
+  <!--<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="" type="image/x-icon">
     <title>panelProveedor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos2.css">
+    <link rel="stylesheet" href="estilos2.css">-->
 
 <head>
   <meta charset="UTF-8">
@@ -40,7 +40,7 @@
         </p>
       </div>
 
-  <nav th:replace="fragments/navbarprov::navp"></nav>
+  <!--<nav th:replace="fragments/navbarprov::navp"></nav>
 
   <h1>Mi Perfil</h1>
   <div class="col-md-4">
@@ -51,12 +51,12 @@
       </p>
 
     </div>
-  </div>
+  </div>-->
 
   <div class="container4">
     <ul>
       <th:block th:each="proveedor: ${proveedor}">
-        <div class="col-md-4">
+        <div class="fotoDescripcion">
           <div class="card1" style="background-color: #000; width: 300px;">
             <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg" class="card-img-top"
               alt="Proveedor 1">
@@ -67,27 +67,27 @@
               <h5 style="color: white;">Honorarios por hora: <span class="card-text"
                   th:text="${proveedor.honorarioHora}"></span></h5>
               <h5 class="card-text" style="color: white;">Cantidad de estrellas: <span
-                  th:text="${proveedor.presentacion}"></span></h5>
+                  th:text="${proveedor.presentacion}" ></span></h5>
               <h5>Presentación: </h5>
             </div>
           </div>
         </div>
       </th:block>
     </ul>
-  </div>
-
+  
+  <div class="bprov">
   <h5>Si necesita contactar algun servicio debe registrarse como usuario</h5>
 
-  <a th:if="${session.personasession != null}" th:href="@{/orden/ordenes}" class="nav-link">Ver mis ordenes
+  <a th:if="${session.personasession != null}" th:href="@{/orden/ordenes}" id="botonppp" class="btn btn-secondary my-2 botones">Ver mis ordenes
   </a>
 
 
-  <a th:if="${session.personasession != null}" th:href="@{perfil}" class="nav-link">Editar Perfil</a>
+  <a th:if="${session.personasession != null}" th:href="@{perfil}" id="botonppp" class="btn btn-secondary my-2 botones">Editar Perfil</a>
 
-  <a th:if="${session.personasession != null}" th:href="@{/logout}" class="nav-link">Cerrar Sesión</a>
+  <a th:if="${session.personasession != null}" th:href="@{/logout}" id="botonppp" class="btn btn-secondary my-2 botones">Cerrar Sesión</a>
 
-
-
+  </div>
+</div>
   <section class="">
     <div class="row mt-3">
       <div class="divVolver">
