--- a/src/main/resources/templates/ContactarProveedor.html
+++ b/src/main/resources/templates/ContactarProveedor.html
@@ -9,11 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/estilos2.css}">
-    <title>VISTA PROVEEDOR</title>
 </head>
 
 <body>
-
+<div class="opacidadgral">
     <nav th:replace="fragments/navbar::nav"></nav>
     <h1 class="text-center">ProSkillFinder</h1>
 
@@ -21,13 +20,13 @@
 
         <div class="izquiercon">
 
-            <div class="fotoPerfil">
-                <img th:src="'data:image/jpeg;base64,' + ${imagen}" alt="Imagen de perfil">
-            </div>
 
             <div class="InfoProv">
 
                 <form th:action="@{/orden/crearOrden}" method="POST">
+                    <div class="fotoPerfil">
+                        <img class="rounded mx-auto d-block" th:src="'data:image/jpeg;base64,' + ${imagen}" alt="Imagen de perfil" width="150" height="150">
+                    </div>
                     <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Nombre: <span
                             th:text="${proveedor.nombre}"></span></li>
                     <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Direccion: <span
@@ -50,28 +49,10 @@
 
             <div class="encabezadoCP">
 
-                
-
                 <form th:action="@{/orden/crearOrden}" method="POST">
-
-                    <input hidden th:value="${proveedor.id}" name="idproveedor">                    
-                    <div class="textoOT">
-
                     <input hidden th:value="${proveedor.id}" name="idproveedor">
 
                     <div class="textoOT">
-
-
-
-                    <h4>ORDEN DE TRABAJO</h4>
-                    <p><input type="text" class="form-control p-4" placeholder="ingresa acá tu comentario" name="comentario"
-                            required="required"></p>
-                    <div class="boton">
-
-                             <button class="btn btn-primary btn-block py-3" type="submit">Enviar</button>
-                    </div>
-                </div>                    
-                </form>  
 
                         <h4>ORDEN DE TRABAJO</h4>
 
@@ -82,7 +63,6 @@
                         <form th:action="@{/orden/crearOrden}" method="POST">
                             <div>
                                 <input hidden th:value="${proveedor.id}" name="idproveedor">
->>>>>>> abell
 
                                 <p><input type="text" class="form-control p-4" placeholder="ingresa acá tu comentario"
                                         name="comentario" required="required"></p>
@@ -90,10 +70,10 @@
                             <div class="boton">
                                 <button class="enviar btn-primary btn-block py-3" type="submit">Enviar</button>
                             </div>
+                        </form>
                     </div>
 
                 </form>
-
 
 
             </div>
@@ -101,10 +81,10 @@
     </div>
 
 
-    <section class="">
+    <section class="botonVolver">
         <div class="row mt-3">
-            <div class="divVolver">
-                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+          <div class="divVolver">
+                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Inicio</a>
             </div>
         </div>
     </section>
@@ -114,6 +94,7 @@
         <div th:replace="fragments/footer::foot"></div>
         <div th:replace="fragments/redesS::red_soc"></div>
     </footer>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
