--- a/src/main/resources/templates/LoginUsuario.html
+++ b/src/main/resources/templates/LoginUsuario.html
@@ -12,42 +12,13 @@
     />
     <link rel="stylesheet" href="css/estilos2.css" />
   </head>
+<body>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand">
-          <img
-            src="logos/casacasa.png"
-            width="30"
-            height="30"
-            class="d-inline-block align-top"
-          />
-        </a>
-        <a class="navbar-brand" href="logos/casacasa.png"></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" href="/">Inicio</a>
-            <a class="nav-link" href="/proveedor/buscador">Buscar</a>
-            <!-- <a class="nav-link" href="/registrar">RegUsuario</a>
-                <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
-            <a class="nav-link" href="/login">Login</a>
-          </div>
-        </div>
-      </div>
-    </nav>
-    <h1>ProSkillFinder</h1>
+
+  <div class="opacidadgral">
+    <nav th:replace="fragments/navbar::nav"></nav>
+    <h1 class="text-center">ProSkillFinder</h1>
+
 
     <div
       th:if="${inactivo != null}"
@@ -59,7 +30,7 @@
       </div>
     </div>
 
-    <h3>Inicia Secion o Registrate segun corresponda</h3>
+    <h3 class="textbusq">Inicia Secion o Registrate segun corresponda</h3>
     <div class="container2">
       <div class="left-side">
         <div class="box">
@@ -112,33 +83,21 @@
         </form>
       </div>
     </div>
-    <section class="">
+    <section class="botonVolver">
       <div class="row mt-3">
         <div class="divVolver">
-          <a th:href="@{/}" class="btn btn-secondary my-2 botonVolver botones"
-            >Volver</a
+          <a th:href="@{/login}" class="btn btn-secondary my-2 botonVolver botones"
+            >Login</a
           >
         </div>
       </div>
     </section>
 
     <footer class="pie">
-      <div class="texto-pie">
-        <p>ubicacion - chacras de coria -Mendoza</p>
-      </div>
-      <div class="redes-sociales">
-        <a href="https://www.facebook.com/" target="_blank"
-          ><img src="logos/facebook.png" alt="Facebook"
-        /></a>
-        <a href="https://www.instagram.com/" target="_blank"
-          ><img src="logos/instagram.png" alt="Instagram"
-        /></a>
-        <a href="https://twitter.com/" target="_blank"
-          ><img src="logos/twitter.png" alt="Twitter"
-        /></a>
-        <p></p>
-      </div>
-    </footer>
+      <div th:replace="fragments/footer::foot"></div>
+      <div th:replace="fragments/redesS::red_soc"></div>
+  </footer>
+</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
