--- a/src/main/resources/templates/MisOrdenesUsuario.html
+++ b/src/main/resources/templates/MisOrdenesUsuario.html
@@ -1,87 +1,98 @@
 <!DOCTYPE html>
-<html <html xmlns:th="https://www.thymeleaf.org">
-  <head>
-    <title>TODO supply a title</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="" type="image/x-icon">
+    <title>Ordenes Usuario</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
+</head>
   <body>
-    <div>Orden creada</div>
-    <div >aca van todas las ordenes</div>
-    <div>USUARIOOOOOOOOO</div>
+    <div class="opacidadgral">
+    <nav th:replace="fragments/navbar::nav"></nav>
+    <h1 class="text-center">ProSkillFinder</h1>
 
-    <table>
-      <h3>Listado de orden</h3>
-      <thead>
-        <tr >
-          <th scope="col">id Orden</th>
-          <th scope="col">Nombre Usuario</th>
-          <th scope="col">Nombre Proveedor</th>
-          <th scope="col">Descripcion del trabajo</th>
-          <th scope="col">Estado</th>
-          <th scope="col">Valor cotizado por el proveedor</th>
-          <th scope="col">Acciones</th>
-        
-        </tr>
+    <div class="container">
+      <div class="row justify-content-center">
+          <div class="col-md-8">
+              <h3 class="text-center">Listado Ordenes de Usuario</h3>
+          </div>
+      </div>
+    </div>
+
+    <div>
+    <table class="table" style="width: 700px; border: 2px solid #FF7F00;">
+      <h3 class="text-center">Listado de ordenes</h3>
+      <thead class="tablemo" style="border: 1px solid #FF7F00;">
+        <th scope="col">id Orden</th>
+        <th scope="col">Nombre Usuario</th>
+        <th scope="col">Nombre Proveedor</th>
+        <th scope="col">Comentario</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Acciones</th>
       </thead>
-      <tbody th:each="orden : ${listaOrdenes}">
-
-      <th th:text="${orden.id}"></th>
-      <td th:text="${orden.usuario.nombre}"></td>
-      <td th:text="${orden.proveedor.nombre}"></td>
-      <td th:text="${orden.comentario}"></td>
-      <td th:text="${orden.estadOrden}"></td>
-      <td th:text="' $ ' + ${orden.valor}"></td>
-      <td >
-          <a th:if="${orden.getEstadOrden().toString() == 'COTIZANDO' } and ${orden.valor != 0} " th:href="@{/orden/aceptar/__${orden.id}__}" >Aceptar Cotizacion </a>
-          <p></p>               
-          <a th:if="${orden.getEstadOrden().toString() == 'ACTIVA'}" th:href="@{/orden/cancelar/__${orden.id}__}" >Cancelar</a>
-          <a th:if="${orden.getEstadOrden().toString() == 'COTIZANDO'}" th:href="@{/orden/cancelar/__${orden.id}__}" >Cancelar</a>
-          <form th:if="${orden.getEstadOrden().toString() == 'FINALIZADA'}" th:action="@{/orden/calificar/__${orden.id}__}" method="POST">
-
+      <tbody th:each="orden : ${listaOrdenes}" style="background-color: #333; border: 1px solid #FF7F00;">
+        <tr style="color: #FFFFFF">
+          <th th:text="${orden.id}"></th>
+          <td th:text="${orden.usuario.nombre}"></td>
+          <td th:text="${orden.proveedor.nombre}"></td>
+          <td th:text="${orden.comentario}"></td>
+          <td th:text="${orden.estadOrden}"></td>
+          <td th:text=" ' $ ' + ${orden.valor}"></td>
+          <td>
+            <a th:href="@{/orden/cancelar/__${orden.id}__}">Cancelar</a>
+            <a sec:authorize="hasRole('USER')">
+              <form th:action="@{/orden/aceptar/__${orden.id}__}" method="post">
+                <input type="hidden" name="ordenId" th:value="${orden.id}" />
+                <button type="submit">Aceptar cotización</button>
+              </form>
+            </a>
+            <a th:href="@{/orden/calificar/__${orden.id}__}">Calificar</a>
+  
+            <form th:action="@{/orden/calificar/__${orden.id}__}" method="post">
+              <input type="hidden" name="ordenId" th:value="${orden.id}" />
               <p>
-                  <input
-                      type="number"
-                      class="form-control p-4"
-                      placeholder="Ingrese del 1 al 5, la puntuacion del proveedor"
-                      name="puntaje"
-                      required="required"
-                      />
+                <input type="number" class="form-control p-4" placeholder="Ingrese del 1 al 5, la puntuacion del proveedor" name="puntaje" required="required"/>
               </p>
               <p>
-                  <input
-                      type="text"
-                      class="form-control p-4"
-                      placeholder="Si quiere agrega comentarios"
-                      name="comentario"
-                      required="required"
-                      />
+                <input type="text" class="form-control p-4" placeholder="Si quiere agrega comentarios" name="comentario" required="required"/>
               </p>
               <button type="submit">Calificar</button>
-          </form>
-      </td> 
+            </form>
+    
+            <form th:action="@{/orden/finalizar/__${orden.id}__}" method="post">
+              <input type="hidden" name="ordenId" th:value="${orden.id}" />
+              <button type="submit">Terminar</button>
+            </form>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
 
-    </tbody>          
-
-
-  </table>
-
-
-
-
-
-
-
-
-
-
-
-
-  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
       <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
-  </ul>
+    </ul>
 
-</body>
+    <section class="botonVolver">
+      <div class="row mt-3">
+        <div class="divVolver">
+          <a th:href="@{/inicio}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+        </div>
+      </div>
+    </section>
 
+    <footer class="pie">
+      <div th:replace="fragments/footer::foot"></div>
+      <div th:replace="fragments/redesS::red_soc"></div>
+  </footer>
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
+  </body>
 </html>
