--- a/src/main/resources/templates/conocenos.html
+++ b/src/main/resources/templates/conocenos.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    <div class="opacidadgral">
     <header></header>
 
     <div class="contText">
@@ -98,11 +98,10 @@
     </div>
 
 
-
-    <section class="">
+    <section class="botonVolver">
         <div class="row mt-3">
-            <div class="divVolver">
-                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+          <div class="divVolver">
+                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Inicio</a>
             </div>
         </div>
     </section>
@@ -111,7 +110,7 @@
 
 
     <script src="js/heafoo.js"></script>
-
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
