--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,79 +1,83 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" html lang="es">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ProSkillFinder</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/estilos2.css">
+  <head>
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <title>ProSkillFinder</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilos2.css">
   </head>
 
-<body>
+  <body>
+    <div class="opacidadgral">
+      <header></header>
 
-<header></header>
+      <h1 class="textind">ProSkillFinder</h1>
 
-  <h1 class="textind">ProSkillFinder</h1>
+      <h3 class="indh3">
+        ¿Necesitas una mano de confianza para mantener tu hogar en óptimas
+        condiciones?
+      </h3>
 
-  <h3 class="indh3">
-    ¿Necesitas una mano de confianza para mantener tu hogar en óptimas condiciones?
-  </h3>
-
-  <div class="transicion">
-    <ul>
-      <li>
-        <h5 class="h5ind">
-           Nosotros estamos listos para ayudarte, contamos con una amplia gama de servicios generales.
-        </h5>
-        <img src="img/paisajista.jpg" alt="Albañil">
-      </li>
-      <li>
-        <img src="img/electricidad.jpg" alt="Electricista">
-      </li>
-      <li>
-        <img src="img/limpiapiscina.jpg" alt="Piletero">
-      </li>
-      <li>
-        <img src="img/limpieza.jpg" alt="Limpieza">
-      </li>
-      <li>
-        <img src="img/paisajista.jpg" alt="Paisajista">
-      </li>
-      <li>
-        <img src="img/parquista.jpg" alt="Parquista">
-      </li>
-      <li>
-        <img src="img/plomero.jpg" alt="Plomero">
-      </li>
-      <li>
-        <img src="img/techista.jpg" alt="Techista">
-      </li>
-    </ul>
-  </div>
-  <div class="button-container">
-    <a href="/conocenos" class="button">Conocenos</a>
-    <a href="/login" class="button">Conectate!</a>
-  </div>
-
-  <section class="">
-    <div class="row mt-3">
-      <div class="divVolver">
-        <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+      <div class="transicion">
+        <ul>
+          <li>
+            <h5 class="h5ind">
+              Nosotros estamos listos para ayudarte, contamos con una amplia
+              gama de servicios generales.
+            </h5>
+            <img src="img/paisajista.jpg" alt="Albañil" >
+          </li>
+          <li>
+            <img src="img/electricidad.jpg" alt="Electricista" >
+          </li>
+          <li>
+            <img src="img/limpiapiscina.jpg" alt="Piletero" >
+          </li>
+          <li>
+            <img src="img/limpieza.jpg" alt="Limpieza" >
+          </li>
+          <li>
+            <img src="img/paisajista.jpg" alt="Paisajista" >
+          </li>
+          <li>
+            <img src="img/parquista.jpg" alt="Parquista" >
+          </li>
+          <li>
+            <img src="img/plomero.jpg" alt="Plomero" >
+          </li>
+          <li>
+            <img src="img/techista.jpg" alt="Techista" >
+          </li>
+        </ul>
       </div>
+      <div class="button-container">
+        <a href="/conocenos" class="button">Conocenos</a>
+        <a href="/login" class="button">Conectate!</a>
+      </div>
+
+      <section class="botonVolver">
+        <div class="row mt-3">
+          <div class="divVolver">
+            <a href="/" class="btn btn-secondary my-2 botonVolver botones"
+              >Ir Arriba</a
+            >
+          </div>
+        </div>
+      </section>
+
+      <footer class="pie"></footer>
+
+      <script src="js/heafoo.js"></script>
     </div>
-  </section>
-
-
-
-  <footer class="pie">
-  </footer>
-
-  <script src="js/heafoo.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
