--- a/src/main/resources/templates/modificarUsuario.html
+++ b/src/main/resources/templates/modificarUsuario.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+  <div class="opacidadgral">
   <nav th:replace="fragments/navbar::nav"></nav>
   <h1 class="text-center">ProSkillFinder</h1>
 
@@ -44,13 +44,13 @@
 
       <label class="textofp" for="direccion">Direccion:</label>
       <input type="text" id="direccion" name="direccion" th:value="${usuario.direccion}" required><br>
-
+      <div class="divVolver">
       <button type="submit" class="btn btn-primary mt-3 botones" id="botforUs">
         Actualizar
-      </button>
+      </button></div>
     </form>
   </div>
-  <section class="">
+  <section class="botonVolver">
     <div class="row mt-3">
       <div class="divVolver">
         <a th:href="@{/inicio}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
@@ -62,7 +62,7 @@
     <div th:replace="fragments/footer::foot"></div>
     <div th:replace="fragments/redesS::red_soc"></div>
   </footer>
-
+</div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
