--- a/src/main/resources/templates/panelAdmin.html
+++ b/src/main/resources/templates/panelAdmin.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <title>Panel Admin</title>
-</head>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
 <body>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Perfil
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
-        </ul>
-    </li>
+    <div class="opacidadgral">
+    <nav th:replace="fragments/navbar::nav"></nav>
+    <h1 class="text-center">ProSkillFinder</h1>
 
-    <h2>Panel Administrador</h2>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <h1 class="text-center">Panel de Administrador</h1>
+            </div>
+        </div>
+    </div>
+
     <div>
-        <table>
-            <h3>Listado de Usuarios</h3>
-            <thead>
+        <table class="tablead1" style="width: 1000px; border: 2px solid #FF7F00;">
+            <h3 class="TextoAdm">Listado de Usuarios</h3>
+            <thead class="tableAdm" >
                 <tr>
                     <th scope="col">id</th>
                     <th scope="col">Nombre</th>
@@ -31,74 +33,93 @@
                     <th scope="col">Rol</th>
                     <th scope="col">Telefono</th>
                     <th scope="col">Direccion</th>
-                    <th scope="col">Cambiar Estado</th>
+                    <th scope="col">Estado</th>
+                    <th scope="col"> </th>
                 </tr>
             </thead>
-            <tbody th:each="usuario : ${usuarios}">
-                <th scope="row" th:text="${usuario.id}"></th>
-                <td th:text="${usuario.nombre}"></td>
-                <td th:text="${usuario.email}"></td>
-                <td th:text="${usuario.rol}"></td>
-                <td th:text="${usuario.telefono}"></td>
-                <td th:text="${usuario.direccion}"></td>
-                <td th:text="${usuario.estado}"></td>
-                <td><a th:href="@{/admin/cambiarEstado/__${usuario.id}__}" role="button">Cambiar Estado</a></td>
+            <tbody th:each="usuario : ${usuarios}" style="background-color: #333; border: 1px solid #FF7F00;">
+                <tr style="color: #FFFFFF">
+                    <th scope="row" th:text="${usuario.id}"></th>
+                    <td th:text="${usuario.nombre}"></td>
+                    <td th:text="${usuario.email}"></td>
+                    <td th:text="${usuario.rol}"></td>
+                    <td th:text="${usuario.telefono}"></td>
+                    <td th:text="${usuario.direccion}"></td>
+                    <td th:text="${usuario.estado}"></td>
+                    <td>
+                        <section class="botonVolver">
+                            <div class="row mt-3">
+                                <div class="divVolver">
+                                    <a th:href="@{/admin/cambiarEstado/__${usuario.id}__}" role="button" class="btn btn-secondary my-2 botonVolver botones">Cambiar estado</a>
+                                </div>
+                            </div>
+                        </section>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
 
-    <h3>Listado de Proveedores</h3>
-    <table>
-        <thead>
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Correo</th>
-                <th scope="col">Rol</th>
-                <th scope="col">Teléfono</th>
-                <th scope="col">Dirección</th>
-                <th scope="col">Cambiar estado</th>
-            </tr>
-        </thead>
+    <br>
 
-        <tbody th:each="proveedor : ${proveedores}">
-            <th scope="row" th:text="${proveedor.id}"></th>
-            <td th:text="${proveedor.nombre}"></td>
-            <td th:text="${proveedor.email}"></td>
-            <td th:text="${proveedor.rol}"></td>
-            <td th:text="${proveedor.telefono}"></td>
-            <td th:text="${proveedor.direccion}"></td>
-            <td th:text="${proveedor.estado}"></td>
-            <td><a th:href="@{/admin/cambiarEstado/__${proveedor.id}__}" role="button">Cambiar estado</a></td>
-        </tbody>
-    </table>
-
-    <h3>Lista de Ordenes de Trabajo</h3>
-    <table>
-        <thead>
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Descripción del trabajo</th>
-                <th scope="col">Puntaje</th>
-                <th scope="col">Estado</th>
-                <th scope="col">Proveedor</th>
-                <th scope="col">(Rubro Proveedor)</th>
-                <th scope="col">(Nombre Usuario)</th>
-            </tr>
-        </thead>
-        <tbody th:each="lista : ${listaOt}">
-            <th scope="row" th:text="${lista.id}"></th>
-            <td th:text="${lista.comentario}"></td>
-            <td th:text="${lista.puntaje}"></td>
-            <td th:text="${lista.estadOrden}"></td>
-            <td th:text="${lista.proveedor.nombre}"></td>
-            <td th:text="${lista.proveedor.rubro}"></td>
-            <td th:text="${lista.usuario.nombre}"></td>
-        </tbody>
-    </table>
     <div>
-
+        <table class="tablead" style="width: 1100px; border: 2px solid #FF7F00;">
+            <h3 class="TextoAdm">Listado de Proveedores</h3>
+            <thead class="tableAdm" style="border: 1px solid #FF7F00;">
+                <tr>
+                    <th scope="col">id</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Correo</th>
+                    <th scope="col">Rol</th>
+                    <th scope="col">Telefono</th>
+                    <th scope="col">Direccion</th>
+                    <th scope="col">Cambiar estado</th>
+                    <th scope="col"> </th>
+                </tr>
+            </thead>
+            <tbody th:each="proveedor : ${proveedores}" style="background-color: #333; border: 1px solid #FF7F00;">
+                <tr style="color: #FFFFFF">
+                    <th scope="row" th:text="${proveedor.id}"></th>
+                    <td th:text="${proveedor.nombre}"></td>
+                    <td th:text="${proveedor.email}"></td>
+                    <td th:text="${proveedor.rol}"></td>
+                    <td th:text="${proveedor.telefono}"></td>
+                    <td th:text="${proveedor.direccion}"></td>
+                    <td th:text="${proveedor.estado}"></td>
+                    <td>
+                        <section class="botonVolver">
+                            <div class="row mt-3">
+                                <div class="divVolver">
+                                    <a th:href="@{/admin/cambiarEstado/__${proveedor.id}__}" class="btn btn-secondary my-2 botonVolver botones">Cambiar estado</a>
+                                </div>
+                            </div>
+                        </section>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
+
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
+    </ul>
+
+    <section class="botonVolver">
+        <div class="row mt-3">
+          <div class="divVolver">
+            <a th:href="@{/inicio}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+          </div>
+        </div>
+      </section>
+
+    <footer class="pie">
+        <div th:replace="fragments/footer::foot"></div>
+        <div th:replace="fragments/redesS::red_soc"></div>
+    </footer>
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
