--- a/src/main/resources/templates/registroProveedor.html
+++ b/src/main/resources/templates/registroProveedor.html
@@ -19,6 +19,7 @@
   </head>
 
   <body>
+    <div class="opacidadgral">
     <nav th:replace="fragments/navbar::nav"></nav>
 
     <h1 class="textind">ProSkillFinder</h1>
@@ -100,19 +101,20 @@
           required
         ></textarea
         ><br />
-
+        <div class="divVolver">
         <button class="botonp" type="submit" id="botonr">
           Registrar Proveedor
-        </button>
+        </button></div>
       </form>
     </div>
-    <section class="">
+
+    <section class="botonVolver">
       <div class="row mt-3">
         <div class="divVolver">
           <a
             th:href="@{/login}"
             class="btn btn-secondary my-2 botonVolver botones"
-            >Volver</a
+            >Login</a
           >
         </div>
       </div>
@@ -122,6 +124,7 @@
       <div th:replace="fragments/footer::foot"></div>
       <div th:replace="fragments/redesS::red_soc"></div>
     </footer>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
