--- a/src/main/resources/templates/registroUsuario.html
+++ b/src/main/resources/templates/registroUsuario.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+    <div class="opacidadgral">
     <header></header>
 
     <h1 class="textind">ProSkillFinder</h1>
@@ -45,18 +45,18 @@
             <input type="text" class="form-control" name="direccion" placeholder="Direccion"
                 th:value="${direccion}"><br>
 
-
+                <div class="divVolver">
             <button type="submit" class="btn btn-primary mt-3 botones">
                 Registrarme
-            </button>
-        </div>
+            </button></div>
+                </div>
     </form>
 
 
-    <section class="">
+    <section class="botonVolver">
         <div class="row mt-3">
-            <div class="divVolver">
-                <a th:href="@{/login}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+          <div class="divVolver">
+                <a th:href="@{/login}" class="btn btn-secondary my-2 botonVolver botones">Login</a>
             </div>
         </div>
     </section>
@@ -64,7 +64,7 @@
 
     <footer class="pie">
     </footer>
-
+</div>
     <script src="js/heafoo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
