--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -102,8 +102,8 @@
 
         <th:block th:each="proveedor : ${proveedores}">
             <div class="col-md-4">
-                <div class="card custom-card">
-
+                <div class="card custom-card" style="background-color: #333; color: white;">
+                   <!-- <img src="'data:image/jpeg;base64,' + ${imagen}" alt="Imagen de perfil">-->
 
                     <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg"
                         class="card-img-top" alt="Proveedor 1">
