--- a/src/main/resources/templates/MisOrdenes.html
+++ b/src/main/resources/templates/MisOrdenes.html
@@ -2,27 +2,29 @@
 
 
 <html xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        
-         <div class="container">
+
+<head>
+  <title>TODO supply a title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+
+  <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8">
         <h1 class="text-center">Listado de Ordenes de Proveedor</h1>
       </div>
     </div>
   </div>
-        
-        
-    </body>
+
+
+</body>
 
 
 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-    <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
+  <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
 </ul>
 
 </html>
@@ -39,21 +41,21 @@
 <body>
   <header></header>
 
- 
+
 
   <div>
     <table class="table" style="width: 900px; border: 2px solid #FF7F00;">
       <h3>Listado de ordenes Recibidas</h3>
       <thead class="table-light" style="border: 1px solid #FF7F00;">
-          <tr>  
-      <th scope="col">id Orden</th>
-        <th scope="col">Nombre Usuario</th>
-        <th scope="col">Nombre Proveedor</th>
-        <th scope="col">Descripcion del trabajo</th>
-        <th scope="col">Estado</th>
-        <th scope="col">Cotizacion</th>
-        <th scope="col">Acciones</th>
-          </tr>
+        <tr>
+          <th scope="col">id Orden</th>
+          <th scope="col">Nombre Usuario</th>
+          <th scope="col">Nombre Proveedor</th>
+          <th scope="col">Descripcion del trabajo</th>
+          <th scope="col">Estado</th>
+          <th scope="col">Cotizacion</th>
+          <th scope="col">Acciones</th>
+        </tr>
       </thead>
       <tbody th:each="orden : ${listaOrdenes}" style="background-color: #333; border: 1px solid #FF7F00;">
         <tr style="color: #FFFFFF">
@@ -62,28 +64,25 @@
           <td th:text="${orden.proveedor.nombre}"></td>
           <td th:text="${orden.comentario}"></td>
           <td th:text="${orden.estadOrden}"></td>
-          <td >              
-              <form th:if="${orden.getEstadOrden().toString() == 'COTIZANDO'}" th:action="@{/orden/cotizacion/__${orden.id}__}" method="POST">
-                  <div class="textoOT">            
-                      <input
-                          type="number"
-                          class="form-control p-4"
-                          placeholder="Ingresa el valor de la cotización"
-                          name="valor"
-                          required="required"
-                          />
-
-                      <div class="boton">
-                          <button class="btn btn-primary btn-block py-3" type="submit">
-                              Enviar Cotización
-                          </button>
-                      </div>
-                  </div>
-              </form>              
-        </td>
           <td>
-              <a th:if="${orden.getEstadOrden().toString() == 'ACTIVA'}"  th:href="@{/orden/finalizar/__${orden.id}__}" >Finalizar</a>
-            </td>
+            <form th:if="${orden.getEstadOrden().toString() == 'COTIZANDO'}"
+              th:action="@{/orden/cotizacion/__${orden.id}__}" method="POST">
+              <div class="textoOT">
+                <input type="number" class="form-control p-4" placeholder="Ingresa el valor de la cotización"
+                  name="valor" required="required" />
+
+                <div class="boton">
+                  <button class="btn btn-primary btn-block py-3" type="submit">
+                    Enviar Cotización
+                  </button>
+                </div>
+              </div>
+            </form>
+          </td>
+          <td>
+            <a th:if="${orden.getEstadOrden().toString() == 'ACTIVA'}"
+              th:href="@{/orden/finalizar/__${orden.id}__}">Finalizar</a>
+          </td>
         </tr>
       </tbody>
     </table>
@@ -107,4 +106,3 @@
 </body>
 
 </html>
-
