--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-
-<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
-
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
-
 
 <head>
     <meta charset="UTF-8">
@@ -16,148 +12,154 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand">
-                <img th:src="@{/logos/casacasa.png}" width="30" height="30" class="d-inline-block align-top">
-            </a>
-            <a class="navbar-brand" th:href="@{/logos/casacasa.png}"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" href="/">Inicio</a>
-                    <a class="nav-link" href="/proveedor/buscador">Buscar</a>
+    <div class="opacidadgral">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand">
+                    <img th:src="@{/logos/casacasa.png}" width="30" height="30" class="d-inline-block align-top">
+                </a>
+                <a class="navbar-brand" th:href="@{/logos/casacasa.png}"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" href="/">Inicio</a>
+                        <a class="nav-link" href="/proveedor/buscador">Buscar</a>
 
-                    <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="/login">Login</a>
 
-                    <ul th:if="${session.personasession != null}">
+                        <ul th:if="${session.personasession != null}">
 
 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false"> Perfil </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" th:href="@{/perfilUsuario}">Editar mi Perfil</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" th:href="@{/orden/ordenes}"> Ver mis ordenes </a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
-                            </ul>
-                        </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false"> Perfil </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" th:href="@{/perfilUsuario}">Editar mi Perfil</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" th:href="@{/orden/ordenes}"> Ver mis ordenes </a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
+                                </ul>
+                            </li>
 
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-    </nav>
-
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <h1 class="text-center">ProSkillFinder</h1>
-                <h5 class="textbusq">Busqueda de Proveedor</h5>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-md-4" id="textbien">
-        <div class="container">
-
-            <span th:if="${session.personasession != null}"
-                th:text=" 'BIENVENIDO/A ' + ${ session.personasession.nombre }  "></span>
-        </div>
-    </div>
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" th:href="@{/perfilUsuario}">Editar Perfil</a></li>
-        <li>
-            <hr class="dropdown-divider">
-        </li>
-
-        <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
-    </ul>
-    <div class="row justify-content-center">
-        <form action="/proveedor/buscador" method="post">
-            <div class="col-md-8">
-                <select class="seleb" name="rubro" id="rubro" required>
-                    <option class="opc" value="">Selecciona un rubro</option>
-                    <option value="Jardinero">Jardinero</option>
-                    <option value="Chapista">Chapista</option>
-                    <option value="Piletero">Piletero</option>
-                    <option value="Salidor">Salidor</option>
-                    <option value="Limpieza">Limpieza</option>
-                    <option value="Otro">Otro<input type="text" id="rubroOtro" name="rubroOtro"
-                            placeholder="Especificar otro rubro" style="display: none"></option>
-                    <button class="botonbus" type="submit">Buscar</button>
-                </select>
-            </div>
-        </form>
-    </div>
-
-    <div class="card-deck" id="resultado">
-
-        <th:block th:each="proveedor : ${proveedores}">
-            <div class="col-md-4">
-                <div class="card custom-card">
-
-                   
-                    <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg"
-                        class="card-img-top" alt="Proveedor 1">
-                    <div class="card-body">
-                        <h5 th:text="${proveedor.nombre}">nombre:</h5>
-                        <p class="card-text">Cantidad de estrellas: <span th:if="${proveedor.promedioPuntaje != null}" th:text="${proveedor.promedioPuntaje}"></span></p>
-
-                        <a th:href="@{/orden/contacto/__${proveedor.id}__}" class="btn btn-primary" id="contac"
-                            th:if="${session.personasession != null}" style="margin:10px">Contactar</a>
-
-                        <a th:href="@{/login}" class="btn btn-primary" id="regist"
-                            th:if="${session.personasession == null}" style="margin:10px">Registrate</a>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </th:block>
 
-    </div>
+        </nav>
 
-
-    <div class="row justify-content-center" th:if="${#lists.isEmpty(proveedores)}">
-        <div class="col-md-4">
-            <div class="card" style="background-color: #000; height: auto;">
-                <div class="card-body">
-                    <p class="row justify-content-center" style="font-weight: bold; color: white;">
-                        No se encontraron proveedores para este rubro</p>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <h1 class="text-center">ProSkillFinder</h1>
+                    <h5 class="textbusq">Busqueda de Proveedor</h5>
                 </div>
             </div>
         </div>
-    </div>
 
-    <br>
+        <div class="col-md-4" id="textbien">
+            <div class="container">
 
-    <div class="imagen-enmarcada" th:if="${#lists.isEmpty(proveedores)}">
-        <img src="https://pic.52112.com/180603/JPG-180603_376/z8rcPckn7v_small.jpg" alt="Descripción de la imagen">
-    </div>
-
-    <section class="">
-        <div class="row mt-3">
-            <div class="divVolver">
-                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+                <span th:if="${session.personasession != null}"
+                    th:text=" 'BIENVENIDO/A ' + ${ session.personasession.nombre }  "></span>
             </div>
         </div>
-    </section>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" th:href="@{/perfilUsuario}">Editar Perfil</a></li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
 
-    <footer class="pie">
-        <div th:replace="fragments/footer::foot"></div>
-        <div th:replace="fragments/redesS::red_soc"></div>
-    </footer>
+            <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
+        </ul>
+        <div class="">
+            <form action="/proveedor/buscador" method="post">
+                <div class="col-md-8">
+                    <select class="seleb" name="rubro" id="rubro" required>
+                        <option class="opc" value="">Selecciona un rubro</option>
+                        <option value="Jardinero">Jardinero</option>
+                        <option value="Chapista">Chapista</option>
+                        <option value="Piletero">Piletero</option>
+                        <option value="Salidor">Salidor</option>
+                        <option value="Limpieza">Limpieza</option>
+                        <option value="Otro">Otro<input type="text" id="rubroOtro" name="rubroOtro"
+                                placeholder="Especificar otro rubro" style="display: none"></option>
+                        <button class="botonbus" type="submit">Buscar</button>
+                    </select>
+                </div>
+            </form>
+        </div>
+
+        <div class="card-deck" id="resultado">
+
+            <th:block th:each="proveedor : ${proveedores}">
+                <div class="col-md-4">
+                    <div class="card custom-card" style="background-color: #333; color: white;">
+                        <!-- <img src="'data:image/jpeg;base64,' + ${imagen}" alt="Imagen de perfil">-->
+
+                        <img src="https://agencia-fotografia.com/wp-content/uploads/2014/06/foto1-150x150.jpg"
+                            class="card-img-top" alt="Proveedor 1">
+                        <div class="card-body">
+                            <h5 th:text="${proveedor.nombre}">nombre:</h5>
+                            <p class="card-text">Cantidad de estrellas: <span
+                                    th:if="${proveedor.promedioPuntaje != null}"
+                                    th:text="${proveedor.promedioPuntaje}"></span></p>
+                            <div class="divVolver">
+                                <a th:href="@{/orden/contacto/__${proveedor.id}__}" class="btn btn-primary" id="contac"
+                                    th:if="${session.personasession != null}" style="margin:10px">Contactar</a>
+                            </div>
+                            <div class="divVolver">
+                                <a th:href="@{/login}" class="btn btn-primary" id="regist"
+                                    th:if="${session.personasession == null}" style="margin:10px">Registrate</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </th:block>
+
+        </div>
 
 
+        <div th:if="${#lists.isEmpty(proveedores)}">
+            <div class="col-md-4">
+                <div class="card" style="background-color: #000; height: auto;">
+                    <div class="card-body">
+                        <p class="row justify-content-center" style="font-weight: bold; color: white;">
+                            No se encontraron proveedores para este rubro</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="imagen-enmarcada" th:if="${#lists.isEmpty(proveedores)}">
+            <img src="https://pic.52112.com/180603/JPG-180603_376/z8rcPckn7v_small.jpg" alt="Descripción de la imagen">
+        </div>
+
+        <section class="botonVolver">
+            <div class="row mt-3">
+                <div class="divVolver">
+                    <a href="/" class="btn btn-secondary my-2 botonVolver botones">Inicio</a>
+                </div>
+            </div>
+        </section>
+
+        <footer class="pie">
+            <div th:replace="fragments/footer::foot"></div>
+            <div th:replace="fragments/redesS::red_soc"></div>
+        </footer>
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
