--- a/src/main/resources/templates/ContactarProveedor.html
+++ b/src/main/resources/templates/ContactarProveedor.html
@@ -13,107 +13,93 @@
 </head>
 
 <body>
+    <div class="opacidadgral">
+        <nav th:replace="fragments/navbar::nav"></nav>
+        <h1 class="text-center">ProSkillFinder</h1>
 
-    <nav th:replace="fragments/navbar::nav"></nav>
-    <h1 class="text-center">ProSkillFinder</h1>
+        <div class="pantalla">
 
-    <div class="pantalla">
+            <div class="izquiercon">
 
-        <div class="izquiercon">
+                <!--   <div class="fotoPerfil">
+                    <img th:src="'data:image/jpeg;base64,' + ${imagen}" alt="Imagen de perfil">
+                </div>-->
 
-            <div class="fotoPerfil">
-                <img th:src="'data:image/jpeg;base64,' + ${imagen}" alt="Imagen de perfil">
+                <div class="InfoProv">
+
+                    <form th:action="@{/orden/crearOrden}" method="POST">
+                        <div class="fotoPerfil">
+                            <img class="rounded mx-auto d-block" th:src="'data:image/jpeg;base64,' + ${imagen}"
+                                alt="Imagen de perfil" width="150" height="150">
+                        </div>
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Nombre: <span
+                                th:text="${proveedor.nombre}"></span>
+                        </li>
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Direccion: <span
+                                th:text="${proveedor.direccion}"></span></li>
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Honorarios por hora: <span
+                                th:text="${proveedor.honorarioHora}"></span></li>
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Telefono: <span
+                                th:text="${proveedor.telefono}"></span></li>
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Presentacion: <span
+                                th:text="${proveedor.presentacion}"></span></li>
+                    </form>
+
+                </div>
+
+
+
             </div>
 
-            <div class="InfoProv">
+            <div class="derecha">
 
-                <form th:action="@{/orden/crearOrden}" method="POST">
-                    <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Nombre: <span
-                            th:text="${proveedor.nombre}"></span></li>
-                    <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Direccion: <span
-                            th:text="${proveedor.direccion}"></span></li>
-                    <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Honorarios por hora: <span
-                            th:text="${proveedor.honorarioHora}"></span></li>
-                    <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Telefono: <span
-                            th:text="${proveedor.telefono}"></span></li>
-                    <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Presentacion: <span
-                            th:text="${proveedor.presentacion}"></span></li>
-                </form>
+                <div class="encabezadoCP">
 
-            </div>
+                    <form th:action="@{/orden/crearOrden}" method="POST">
+                        <input hidden th:value="${proveedor.id}" name="idproveedor">
+
+                        <div class="textoOT">
+
+                            <h4>ORDEN DE TRABAJO</h4>
+
+                            <h6 class="texCP">INGRESA TU ORDEN DE TRABAJO PARA EL PROVEEDOR, POR FAVOR SER CLARO CON TU
+                                PETICION </h6>
 
 
+                            <form th:action="@{/orden/crearOrden}" method="POST">
+                                <div>
+                                    <input hidden th:value="${proveedor.id}" name="idproveedor">
 
-        </div>
-
-        <div class="derecha">
-
-            <div class="encabezadoCP">
-
-                
-
-                <form th:action="@{/orden/crearOrden}" method="POST">
-
-                    <input hidden th:value="${proveedor.id}" name="idproveedor">                    
-                    <div class="textoOT">
-
-                    <input hidden th:value="${proveedor.id}" name="idproveedor">
-
-                    <div class="textoOT">
-
-
-
-                    <h4>ORDEN DE TRABAJO</h4>
-                    <p><input type="text" class="form-control p-4" placeholder="ingresa acá tu comentario" name="comentario"
-                            required="required"></p>
-                    <div class="boton">
-
-                             <button class="btn btn-primary btn-block py-3" type="submit">Enviar</button>
-                    </div>
-                </div>                    
-                </form>  
-
-                        <h4>ORDEN DE TRABAJO</h4>
-
-                        <h6 class="texCP">INGRESA TU ORDEN DE TRABAJO PARA EL PROVEEDOR, POR FAVOR SER CLARO CON TU
-                            PETICION </h6>
-
-
-                        <form th:action="@{/orden/crearOrden}" method="POST">
-                            <div>
-                                <input hidden th:value="${proveedor.id}" name="idproveedor">
->>>>>>> abell
-
-                                <p><input type="text" class="form-control p-4" placeholder="ingresa acá tu comentario"
-                                        name="comentario" required="required"></p>
-                            </div>
-                            <div class="boton">
-                                <button class="enviar btn-primary btn-block py-3" type="submit">Enviar</button>
-                            </div>
-                    </div>
-
-                </form>
-
-
-
+                                    <p><input type="text" class="form-control p-4"
+                                            placeholder="ingresa acá tu comentario" name="comentario"
+                                            required="required"></p>
+                                </div>
+                                <div class="boton">
+                                    <button class="enviar btn-primary btn-block py-3" type="submit">Enviar</button>
+                                </div>
+                            </form>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
+
+
+
+        <section class="botonVolver">
+            <div class="row mt-3">
+                <div class="divVolver">
+                    <a href="/" class="btn btn-secondary my-2 botonVolver botones">Inicio</a>
+                </div>
+            </div>
+        </section>
+
+
+        <footer class="pie">
+            <div th:replace="fragments/footer::foot"></div>
+            <div th:replace="fragments/redesS::red_soc"></div>
+        </footer>
     </div>
-
-
-    <section class="">
-        <div class="row mt-3">
-            <div class="divVolver">
-                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
-            </div>
-        </div>
-    </section>
-
-
-    <footer class="pie">
-        <div th:replace="fragments/footer::foot"></div>
-        <div th:replace="fragments/redesS::red_soc"></div>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
