--- a/src/main/resources/templates/MisOrdenes.html
+++ b/src/main/resources/templates/MisOrdenes.html
@@ -1,108 +1,77 @@
 <!DOCTYPE html>
-
-
-<html xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
+<html lang="es">
 
 <head>
-  <title>TODO supply a title</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="" type="image/x-icon">
+    <title>Ordenes Proveedor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
+    </head>
+  <body>
 
-<body>
+    <div class="opacidadgral">
+    <nav th:replace="fragments/navbarprov::navp"></nav>
+    <h1 class="text-center">ProSkillFinder</h1>
 
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <h1 class="text-center">Listado de Ordenes de Proveedor</h1>
+    <div class="container">
+      <div class="row justify-content-center">
+          <div class="col-md-8">
+              <h1 class="text-center">Listado de Ordenes de Proveedor</h1>
+          </div>
       </div>
     </div>
-  </div>
 
-
-</body>
-
-
-<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-  <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
-</ul>
-
-</html>
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="" type="image/x-icon">
-  <title>Ordenes Proveedor</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" th:href="@{/css/estilos2.css}">
-
-<body>
-  <header></header>
-
-
-
-  <div>
-    <table class="table" style="width: 900px; border: 2px solid #FF7F00;">
-      <h3>Listado de ordenes Recibidas</h3>
-      <thead class="table-light" style="border: 1px solid #FF7F00;">
-        <tr>
+    <div>
+      <table class="table" style="width: 700px; border: 2px solid #FF7F00;">
+        <h3 class="text-center"> Listado de ordenes</h3>
+        <thead class="tablemo" style="width: 700px; border: 3px solid #FF7F00; ">
           <th scope="col">id Orden</th>
           <th scope="col">Nombre Usuario</th>
           <th scope="col">Nombre Proveedor</th>
-          <th scope="col">Descripcion del trabajo</th>
+          <th scope="col">Comentario</th>
           <th scope="col">Estado</th>
-          <th scope="col">Cotizacion</th>
           <th scope="col">Acciones</th>
-        </tr>
-      </thead>
-      <tbody th:each="orden : ${listaOrdenes}" style="background-color: #333; border: 1px solid #FF7F00;">
-        <tr style="color: #FFFFFF">
-          <th th:text="${orden.id}"></th>
-          <td th:text="${orden.usuario.nombre}"></td>
-          <td th:text="${orden.proveedor.nombre}"></td>
-          <td th:text="${orden.comentario}"></td>
-          <td th:text="${orden.estadOrden}"></td>
-          <td>
-            <form th:if="${orden.getEstadOrden().toString() == 'COTIZANDO'}"
-              th:action="@{/orden/cotizacion/__${orden.id}__}" method="POST">
-              <div class="textoOT">
-                <input type="number" class="form-control p-4" placeholder="Ingresa el valor de la cotización"
-                  name="valor" required="required" />
-
-                <div class="boton">
-                  <button class="btn btn-primary btn-block py-3" type="submit">
-                    Enviar Cotización
-                  </button>
-                </div>
-              </div>
-            </form>
-          </td>
-          <td>
-            <a th:if="${orden.getEstadOrden().toString() == 'ACTIVA'}"
-              th:href="@{/orden/finalizar/__${orden.id}__}">Finalizar</a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <section class="">
-    <div class="row mt-3">
-      <div class="divVolver">
-        <a href="/proveedor/panelProveedor" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
-      </div>
+          <th scope="col"> </th>
+        </thead>
+        <tbody th:each="orden : ${listaOrdenes}" style="background-color: #333; border: 1px solid #FF7F00;">
+          <tr style="color: #FFFFFF">
+            <th th:text="${orden.id}"></th>
+            <td th:text="${orden.usuario.nombre}"></td>
+            <td th:text="${orden.proveedor.nombre}"></td>
+            <td th:text="${orden.comentario}"></td>
+            <td th:text="${orden.estadOrden}"></td>
+            <td>
+              <a th:href="@{/orden/cancelar/__${orden.id}__}">Cancelar</a>
+              <a th:href="@{/orden/aceptar/__${orden.id}__}">Aceptar cotizacion</a>
+              <a th:href="@{/orden/calificar/__${orden.id}__}">Calificar</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-  </section>
 
-  <footer class="pie"> </footer>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+      <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
+    </ul>
 
-  <script src="js/heafoo.js"></script>
+    <section class="botonVolver">
+      <div class="row mt-3">
+        <div class="divVolver">
+          <a th:href="@{/inicio}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+        </div>
+      </div>
+    </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-</body>
-
+    <footer class="pie">
+      <div th:replace="fragments/footer::foot"></div>
+      <div th:replace="fragments/redesS::red_soc"></div>
+    </footer> 
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+  </body>
 </html>
