--- a/src/main/resources/templates/modificarProveedor.html
+++ b/src/main/resources/templates/modificarProveedor.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
+  <div class="opacidadgral">
   <nav th:replace="fragments/navbarprov::navp"></nav>
+
   <h1 class="text-center">ProSkillFinder</h1>
   <div class="modUsuario">
     <form class="formularioUsua" th:object="${proveedor}" th:action="@{/proveedor/perfil/__${proveedor.id}__}"
@@ -54,17 +56,6 @@
         <option value="Limpieza">Limpieza</option>
       </select>
 
-      <!--
-        <label class="textofp" for="rubro">rubro:</label>
-        <input
-          type="text"
-          id="rubro"
-          name="rubro"
-          th:value="${proveedor.rubro}"
-          required
-        />
-        <br />
--->
       <br>
       <label for="presentacion" id="pres">presentacion:</label>
       <textarea id="presentacion" name="presentacion" rows="4" th:value="${proveedor.presentacion}" required></textarea>
@@ -72,13 +63,13 @@
       <label class="textofp" type="file">Foto de perfil</label>
       <input class="textofp" type="file" name="archivo">
       <br>
-
+      <div class="divVolver">
       <button type="submit" class="btn btn-primary mt-3 botones" id="botforUs">
         Actualizar
-      </button>
+      </button></div>
     </form>
   </div>
-  <section class="">
+  <section class="botonVolver">
     <div class="row mt-3">
       <div class="divVolver">
         <a th:href="@{/proveedor/panelProveedor}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
@@ -87,11 +78,12 @@
   </section>
 
 
+
   <footer class="pie">
     <div th:replace="fragments/footer::foot"></div>
     <div th:replace="fragments/redesS::red_soc"></div>
   </footer>
-
+</div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
