cambio nombre de prov en el buscador

--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -87,9 +87,9 @@
                     <select class="seleb" name="rubro" id="rubro" required>
                         <option class="opc" value="">Selecciona un rubro</option>
                         <option value="Jardinero">Jardinero</option>
-                        <option value="Chapista">Chapista</option>
+                        <option value="Chapista">Plomero</option>
                         <option value="Piletero">Piletero</option>
-                        <option value="Salidor">Salidor</option>
+                        <option value="Salidor">Paseador de perros</option>
                         <option value="Limpieza">Limpieza</option>
                         <option value="Otro">Otro<input type="text" id="rubroOtro" name="rubroOtro"
                                 placeholder="Especificar otro rubro" style="display: none"></option>
